feat: added ArtistEntityConverter and ArtistDTOConverter